--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 
+# Spring api-docs uri
 springdoc.api-docs.path=/hms-docs
+
+# To display error message in Rest response
+# from Exception Handler @ResponseStatus
+server.error.include-message=always
